# repopromo

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
docs/: architecture.md  lessons-learned.md  workflow.md
examples/: clawdaydayup_brief.json  clawdaydayup_review_plan.json  clawmingguang_brief.json
examples/clawmingguang_review/: 01_why.html  02_mechanism.html  03_features.html  04_cta.html  index.html
examples/clawmingguang_sample_video/: sample_video.srt  sample_video.txt
examples/clawmingguang_sample_video/narration/: 01_why.txt  02_mechanism.txt  03_features.txt  04_cta.txt
skills/repo-promo-video/: SKILL.md
skills/repo-promo-video/agents/: openai.yaml
src/repopromo/: __init__.py  archive.py  brief.py  cli.py  ingest.py  models.py  pipeline.py  png_render.py  review_render.py  script.py  slides.py  video_assembly.py  workflow.py
tests/: __init__.py  test_brief.py
